# ffc

./: .gitignore  AGENTS.md  BACKLOG.md  BUILD_OPTIMIZATION.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  EPIC4_ANALYSIS.md  FORTFRONT.md  README.md  ROADMAP.md  STRATEGY.md  TEST_STRUCTURE.md  configure_build.sh  fpm.toml  string_type.mod  test_memory_management  test_mlir_simple.c  test_string  validate_build.sh
app/: ffc.f90  ffc_green.f90  main.f90
docs/: API_REFERENCE.md  CHARACTER_DESCRIPTOR_ABI.md  CONFORMANCE.md  C_API_USAGE.md  DEVELOPER_GUIDE.md  MIGRATION_GUIDE.md  PARITY_PLAN.md  PARITY_STATUS.md  RUNTIME_ABI.md  SUPPORT_CONTRACT.md
legacy_mlir/: ffc_designate.f90  ffc_hlfir_complete.f90.disabled  ffc_minimal.f90
scripts/: audit_manifest_owners.sh  collect_performance_data.sh  conformance_check.sh  conformance_gauntlet.sh  fetch_corpora.sh  generate_parity_dashboard.sh  lib_conformance.sh  lib_expected_manifest.sh  lib_parity_dashboard.sh  perf_compare.py  validate_parity_report.awk
src/: TYPE_CONVERSION.md  ffc.f90  ffc_character_descriptor.f90  ffc_cli_options.f90  ffc_fortfront_queries.f90  ffc_module_artefact.f90  ffc_strings.f90  ffc_test_support.f90  liric_session_arrays.inc  liric_session_bindings.f90  liric_session_common.f90  liric_session_complex_print_bindings.f90  liric_session_control_bindings.f90  liric_session_format_bindings.f90  liric_session_format_e_en.inc  liric_session_io_bindings.f90  liric_session_io_emission_bindings.f90  liric_session_memory_bindings.f90  liric_session_memory_bindings_i8_i16.inc  liric_session_memory_bindings_narrow_int_arrays.inc  liric_session_memory_bindings_tail.inc  liric_session_procedure_bindings.f90  liric_session_real_print_bindings.f90  liric_session_real_print_bindings_tail.inc  liric_session_timing_bindings.f90  session_lowering_ops.f90  session_program_lowering.f90  session_program_lowering_alloc_array_result.inc  session_program_lowering_allocatable.inc  session_program_lowering_allocated.inc  session_program_lowering_arguments.inc  session_program_lowering_array_elements.inc  session_program_lowering_arrays.inc  session_program_lowering_associate.inc  session_program_lowering_assumed_shape_extent.inc  session_program_lowering_block_concurrent.inc  session_program_lowering_c_ptr.inc  session_program_lowering_char_arrays.inc  session_program_lowering_character.inc  session_program_lowering_character_tail.inc  (+58 more)
src_mvp/: empty_program_lowering.f90  liric_bindings.f90  liric_session_bindings.f90  liric_session_control_bindings.f90  liric_session_io_bindings.f90  liric_session_procedure_bindings.f90  session_lowering_ops.f90  session_program_lowering.f90  session_program_lowering_arguments.inc  session_program_lowering_character.inc  session_program_lowering_control.inc  session_program_lowering_diagnostics.inc  session_program_lowering_functions.inc  session_program_lowering_integer.inc  session_program_lowering_intrinsics.inc  session_program_lowering_loops.inc  session_program_lowering_text.inc  session_program_lowering_values.inc
test/: check_test_dependencies.sh  comprehensive_test_runner  performance_benchmarks.f90  performance_benchmarks.f90.disabled  run_all_tests.f90  test_backend_interface.f90  test_batch_lf.f90  test_build_system_integration  test_build_system_integration.f90  test_character_descriptor_layout.f90  test_ci_integration  test_ci_integration.f90  test_cli_version_help.f90  test_concat_literal_and_deferred.f90  test_concat_three_distinct_deferred_variables.f90  test_conformance_gauntlet_smoke.f90  test_conformance_manifest_validation.f90  test_counted_do_compiler.f90  test_counted_do_negative_step_compiler.f90  test_debug.f90  test_dialect_shared.f90  test_docs_no_drift_claims.f90  test_ffc.f90  (+333 more)
(+256 files in other folders)
